--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
           <%= render 'searches/form' %>
         </div>
       <% end %>
-      <div class="flash_message">
+      <div class="d-flex justify-content-center flash_message">
         <%= render 'layouts/flash' %>
       </div>
     </header>
