--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,7 +3,10 @@
     <h3>お問い合わせフォーム</h3>
   </div>
   <!--urlを確認画面のurlにすることで、データを確認画面に送っている。-->
-  <%= form_with model: @contact, url: confirm_contacts_path, local: true do |f| %>
+  <%= form_with model: @contact, url: confirm_contacts_path do |f| %>
+    <div class="contact_error">
+      <%= render 'layouts/error_messages', model: f.object %>
+    </div>
     <div class="form-group">
       <%= f.label :お名前 %>
       <%= f.text_field :name, autofoucus: true, class: 'form-control' %>
