--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,13 @@
 <div class="container postshow">
   <div class="row">
     <div class="col-lg-3">
-      <div class="postshow-user">
+      <div class="row d-flex align-items-center postshow-user">
         <%= link_to user_path(@user.id) do %>
           <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
         <% end %>
         <%= @user.name %>
       </div>
-      <div class="user-introduction">
+      <div class="row user-introduction">
         <%= @user.introduction %>
       </div>
       <% if @user == current_user %>
@@ -22,13 +22,13 @@
           <% end %>
         </div>
       <% else %>
-        <div class="relationship_count">
+        <div class="row relationship_count">
           <%= render "relationships/count", user: @user, following_users: @following_users, follower_users: @follower_users %>
         </div>
-        <div class="relationship">
+        <div class="row relationship">
           <%= render "relationships/button", user: @user %>
         </div>
-        <div>
+        <div class="row message-btn">
           <%= render "users/message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
         </div>
       <% end %>
