--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
           <div class="col-lg-5 col-md-5 relationship">
             <%= render "relationships/button", user: @user %>
           </div>
-          <div class="col-lg-5 col-md-5">
+          <div class="col-lg-5 col-md-5 message-btn">
             <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
           </div>
         </div>
