--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -4,7 +4,7 @@
     <table class="table d-flex justify-content-center">
       <% @users.each do |user| %>
         <tr>
-          <td class="ranking-user-name">
+          <td class="follow-user-name">
             <%= link_to user_path(user.id) do %>
               <%= attachment_image_tag user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
               <%= user.name %>
