--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,12 +26,12 @@
           <div class="col-lg-4 col-md-6">
             <h3><%= @user.name %></h3>
           </div>
-          <div class="col-lg-4 col-md-3">
+          <div class="col-lg-4 col-md-3 user-edit-btn">
             <%= link_to edit_user_path(current_user.id) do %>
               <i class="fas fa-user-edit"></i>
             <% end %>
           </div>
-          <div class="col-lg-4 col-md-3">
+          <div class="col-lg-4 col-md-3 logout-btn">
             <%= link_to "Logout", destroy_user_session_path, method: :delete %>
           </div>
         </div>
