--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,7 +84,7 @@ main {
 .text-box {
   margin: 70px 0;
 }
-.top-text {
+.top-text, .about-text{
   color: #FFFFFF;
 }
 
@@ -116,6 +116,14 @@ main {
   width: 100%;
   // box-sizing: border-box;
   // height: auto;
+}
+.slick-prev {
+  left: 0;
+  z-index: 1;
+}
+
+.slick-next {
+  right: 0;
 }
 // ここまで
 // 新規投稿ページ
@@ -226,14 +234,14 @@ main {
   font-size: 12pt;
   color: black;
 }
-.mypage img {
+.mypage img{
   width: 32%;
   height: auto;
   margin-bottom: 4px;
 }
 .profile-image img{
-  width:  100%;
-  height: 100%;
+  width:  200px;
+  height: 200px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -322,7 +330,61 @@ dt{
 	border-color: #CCCCCC;
 	border-style: solid;
 }
+@media screen and (max-width: 768px){
+  .about-text{
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 767px){
+  .top-text{
+    font-size: 22px;
+  }
+  .about-text{
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 575px){
+  .profile-image img{
+  width:  100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  }
+}
+@media screen and (max-width: 425px){
+  .top-text{
+    font-size: 17px;
+    font-weight: bold;
+  }
+  .about-text{
+    font-size: 17px;
+    font-weight: bold;
+    .br-sp {display: none; }
+  }
+  .profile-image img{
+  width:  150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  }
+}
 
-@media screen and (max-width: 420px){
-.br-sp {display: none; }
+
+@media screen and (max-width: 414px){
+  .top-text{
+    font-size: 15px;
+    font-weight: bold;
+  }
+  .about-text{
+    font-size: 16px;
+    font-weight: bold;
+    .br-sp {display: none; }
+  }
+}
+
+@media screen and (max-width: 320px){
+  .top-text{
+    font-size: 12px;
+    font-weight: bold;
+  }
 }
