--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex justify-content-center text-center text-box">
     <h3 class="top-text">
-      自慢のキャンプレイアウトや、<br class="br-sp">
+      自慢のキャンプレイアウトや、<br>
       素敵なグランピング体験をみんなでシェアしよう！
     </h3>
   </div>
