--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row d-flex flex-column justify-content-center align-items-center">
+  <div class="row d-flex flex-column justify-content-center align-items-center mt-4">
     <h4>DMリスト</h4>
     <% @rooms.each do |room| %>
     <div class="col dm-box">
