--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="message_error">
     <%= render 'layouts/error_messages', model: f.object %>
   </div>
-  <%= f.text_field :message, placeholder: "メッセージを入力" %>
+  <%= f.text_area :message, rows:'3',placeholder: "メッセージを入力" %>
   <%= f.hidden_field :room_id, value: @room.id %><!--メッセージがどのルームのものか判断するために、メッセージと一緒にroomのidも送る-->
   <%= f.submit "送信" %>
 <% end %>
