--- a/app/views/relationships/_button.html.erb
+++ b/app/views/relationships/_button.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
   <% if current_user.following?(user) %>
     <div class="btn btn-primary follow-btn">
-      <%= link_to "フォロー中", user_relationships_path(user.id), method: :delete, remote: true %>
+      <%= render "notfollow_button", user: user %>
     </div>
   <% else %>
     <div class="btn btn-success follow-btn">
-      <%= link_to "フォロー", user_relationships_path(user.id), method: :POST, remote: true %>
+      <%= render "follow_button", user: user %>
     </div>
   <% end %>
 <% else %>
