--- a/app/views/relationships/destroy.js.erb
+++ b/app/views/relationships/destroy.js.erb
@@ -1,4 +1,4 @@
-$(".relationship").html("<%= j(render 'relationships/button', user: @user) %>");
+$(".relationship_<%= @user.id %>").html("<%= j(render 'relationships/button', user: @user) %>");
 
 
 $(".relationship_count").html("<%= j(render 'relationships/count', user: @user, following_users: @following_users, follower_users: @follower_users) %>");
