--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
           <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
         </div>
         <div class="row">
-          <div class="col-lg-5 col-md-5 col-sm-12 relationship">
+          <div class="col-lg-5 col-md-5 col-sm-12 relationship_<%= @user.id %>">
             <%= render "relationships/button", user: @user %>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-12 message-btn">
