--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -7,7 +7,8 @@
     <%= visiter.name %>
   <% end %>
   <%= "さんが" %>
-
+  
+  <!--アクションごとに表示する内容を記載している。-->
   <% case notification.action %>
     <% when 'follow' then %>
       <%= "あなたをフォローしました" %>
