--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row user-inf">
-    <div class="col-lg-3 col-md-5 col-sm-5 profile-image">
+    <div class="col-lg-3 col-md-5 col-sm-5 col-4 profile-image">
       <%= attachment_image_tag @user, :profile_image, fallback: "no_image.jpg" %>
     </div>
-    <div class="col-lg-9 col-md-7 col-sm-7">
+    <div class="col-lg-9 col-md-7 col-sm-7 col-8">
       <% if current_user != @user %>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
