--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -20,7 +20,7 @@
           <%= f.text_area :body, placeholder: "道具の紹介や施設の紹介など" %>
         </div>
         <div　class="btn-form">
-          <%= f.submit "シェア",  class: "share-botton" %>
+          <%= f.submit "シェア",  class: "share-btn" %>
         </div>
       </div>
     <% end %>
