--- a/app/views/searches/_users_index.html.erb
+++ b/app/views/searches/_users_index.html.erb
@@ -8,7 +8,7 @@
         <% end %>
       </td>
       <td>
-        <div class="relationship">
+        <div class="relationship_<%= user.id %>">
           <%= render "relationships/button", user: user %>
         </div>
       </td>
