--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -52,14 +52,14 @@
         <%= @post.impressionist_count(:filter=>:ip_address) %>
       </div>
       <div class="post-body">
-        <%= @post.body %>
+        <%= safe_join(@post.body.split("\n"),tag(:br)) %>
       </div>
       <div class="time">
         <i class="far fa-clock clock-icon"></i>
         <%= time_ago_in_words(@post.created_at) %>前
       </div>
     </div>
-    <div class="col-lg-3 d-flex flex-column align-items-center">
+    <div class="col-lg-3 pl-4">
       <!--jsファイルに処理を記述するためにクラス名を記載-->
       <div class="comments_area">
         <%= render 'comments/comments', post: @post %>
