[update]devise,contact

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ main {
   color: #FFFFFF;
 }
 
-.login, .signup {
+.login, .signup, .edit-password {
   margin: 70px 0;
 }
 .signuptitle, .signupbtn, .contactbtn, .contact-sendbtn, .contact-backbtn{
