--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex justify-content-center">
     <%= form_with model: @post do |f| %>
-      <div class="col d-inline-flex flex-column align-items-center postnew">
+      <div class="d-flex flex-column align-items-center postnew">
         <div class="postnew-title">
           <h3>新規登録</h3>
         </div>
