--- a/app/views/searches/_users_index.html.erb
+++ b/app/views/searches/_users_index.html.erb
@@ -8,9 +8,11 @@
         <% end %>
       </td>
       <td>
-        <div class="relationship_<%= user.id %>">
-          <%= render "relationships/button", user: user %>
-        </div>
+        <% unless current_user == user %>
+          <div class="relationship_<%= user.id %>">
+            <%= render "relationships/button", user: user %>
+          </div>
+        <% end %>
       </td>
     </tr>
   <% end %>
