--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -1,4 +1,4 @@
-<% if messages.present? %>  <!--@messagesにメッセージが入っているか確認-->
+<% if messages.present? %>
   <% messages.each do |m| %>
     <table class="table dm-table">
       <% if m.user.id == current_user.id %>
