--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,10 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg">
         <div class="site-name">
-        <%= link_to root_path do %>
-          <h1>Campage</h1>
-        <% end %>
+          <a href="/" ><img class="navbar-brand" src="/assets/logo.png"/></a>
+        <%#= link_to root_path do %>
+          <!--<h1>Campage</h1>-->
+        <%# end %>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
