--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,17 +14,15 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
   </head>
 
   <body class="<%= controller.controller_name %>">
     <header class="header">
       <nav class="navbar navbar-expand-lg">
         <div class="site-name">
-          <a href="/" ><img class="navbar-brand" src="/assets/logo.png"/></a>
-        <%#= link_to root_path do %>
-          <!--<h1>Campage</h1>-->
-        <%# end %>
+          <%= link_to root_path do %>
+            <%= image_tag asset_path('logo.png') %>
+          <% end %>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
