--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
         <% end %>
       </div>
     </div>
-    <div class="col-lg-9">
+    <div class="col-lg-6">
       <% @posts.each do |post| %>
         <div class="post-boxes">
           <div class="user-name">
@@ -25,7 +25,7 @@
           <div class="slick">
             <% post.post_images.each do |image| %>
               <%= link_to post_path(image.post.id) do %>
-                <%= attachment_image_tag image, :image %>
+                <%= attachment_image_tag image, :image, class: 'slick_image' %>
               <% end %>
             <% end %>
           </div>
