--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: search_path, method: :get, local: true do |f| %>
   <%= f.search_field :content, placeholder: "検索ワード" %>
-  <%= f.select :model, {'人物': 'user', '投稿': 'post'}, { include_blank: '選択'} %>
+  <%= f.select :model, {'人物': 'user', '投稿': 'post'}, { include_blank: '選択'},{ required: 'required'} %>
   <%= f.submit "検索" %>
 <% end %>
