--- a/app/views/posts/pv_ranking.html.erb
+++ b/app/views/posts/pv_ranking.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4>閲覧数が多い投稿</h4>
+  <h4>閲覧数が多い投稿（<%= @date1 %>月）</h4>
   <div class="row">
     <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
   </div>
