--- a/app/views/posts/ranking.html.erb
+++ b/app/views/posts/ranking.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-  <h4>グッド!!が多い投稿</h4>
+  <h4>グッド!!が多い投稿（<%= @date1 %>月）</h4>
   <div class="row">
     <%= render "good_ranking", posts_good_ranking: @posts_good_ranking %>
   </div>
   <div class=" row d-flex justify-content-end ranking-list">
     <%= link_to "一覧で見る", posts_good_ranking_path %>
   </div>
-  <h4>閲覧数が多い投稿</h4>
+  <h4>閲覧数が多い投稿（<%= @date1 %>月）</h4>
   <div class="row">
     <%= render "pv_ranking", posts_pv_ranking: @posts_pv_ranking %>
   </div>
