--- a/app/views/users/_message_button.html.erb
+++ b/app/views/users/_message_button.html.erb
@@ -5,7 +5,7 @@
         <%= link_to "メッセージ", room_path(roomid) %>
       </div>
     <% else %>
-      <%= form_with model: room, local: true do |f| %>
+      <%= form_with model: room, local: true do |f| %>  <!--roomsテーブルに情報を送信-->
         <%= fields_for entry do |r| %>    <!--entriesテーブルに情報を送信-->
           <%= r.hidden_field :user_id, value: user.id %>  <!--entriesテーブルにuser_idを含める-->
         <% end %>
