--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -42,6 +42,8 @@
           <%= attachment_image_tag image, :image, class: 'slick_image' %>
         <% end %>
       </div>
+      <!--どの投稿も同じ部分テンプレートを使うので、グッドを押すと全ての投稿にグッドがついてしまうので、-->
+      <!--部分テンプレート自体にidをつけることで、投稿ごとにグッドをすることができる。-->
       <div class="like_btn_<%= @post.id %>">
         <%= render "likes/like", post: @post %>
       </div>
